--- a/uProlog.cabal
+++ b/uProlog.cabal
@@ -9,8 +9,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules: UProlog
-  other-extensions: FlexibleInstances, FlexibleContexts
+  exposed-modules:     UProlog, UProlog.Val, UProlog.State
+  other-extensions:    FlexibleInstances, FlexibleContexts
   build-depends:       base >=4.8, logict, mtl, containers
   hs-source-dirs:      src
   default-language:    Haskell2010
+  GHC-Options:         -O2 -Wall
